[package]
name = "egui-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.20.1" }

rfd = { version = "0.10.0", default-features = false, features = ["xdg-portal"] }

ron = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
