[package]
name = "imgui-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { version = "0.9.0" }
glium = { version = "0.32.1", default-features = true }
imgui-glium-renderer = { version = "0.9.0" }
imgui-winit-support = { version = "0.9.0" }
