[package]
name = "orbtk-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", rev = "eba9e77821551076bbf1d9f7ab44d788150e3446", default-features = false, features = ["bundled"] }
