[package]
name = "ribir-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ribir = { version = "0.1.0-beta.7" }

rfd = { version = "0.13", default-features = false, features = ["xdg-portal", "async-std"] }
ron = { version = "0.8" }
serde = "1"
