[package]
name = "slint-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.4", default-features = false, features = ["std", "compat-0-3-0", "backend-winit", "renderer-winit-femtovg", "renderer-winit-skia"] }

[build-dependencies]
slint-build = { version = "0.3.4" }
