[package]
name = "slint-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.4", default-features = false, features = ["std", "compat-0-3-0", "backend-winit", "renderer-winit-femtovg", "renderer-winit-skia"] }

rfd = { version = "0.10.0", default-features = false, features = ["xdg-portal"] }
ron = { version = "0.8" }
serde = { version = "1", features = ["derive"] }

[build-dependencies]
slint-build = { version = "0.3.4" }
