[package]
name = "qml-minimal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.75"
cxx-qt = { version = "0.4.1" }
cxx-qt-lib = { version = "0.4.1" }

ron = { version = "0.8" }
serde = { version = "1", features = ["derive"] }

# cxx-qt-build generates C++ code from the `#[cxx_qt::bridge]` module
# and compiles it together with the Rust static library
[build-dependencies]
cxx-qt-build = { version = "0.4.1" }
